# scriptorium

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  STATUS.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: scriptorium-init.md
.github/workflows/: ci-r.yml  ci.yml
agents/: librarian.md  peer-reviewer.md  research-scout.md  statistician.md
benchmarks/sci-writing-injection/: LICENSE  README.md  run_benchmark.py  zenodo-metadata.json
config/: profile.example.md
docs/: behavioral-validation.md  configuration.md  lifecycle.md  philosophy.md
docs/plans/: 2026-06-04-scriptorium-v0.1-build.md  2026-06-05-scriptorium-v2-plan1-foundation.md  2026-06-06-scriptorium-v2-plan2-engines.md  2026-06-06-scriptorium-v2-plan3-kb-guard.md  2026-06-06-scriptorium-v3-plan1-engine-expansion.md  2026-06-06-scriptorium-v4-plan1-power-and-profile.md  2026-06-08-scriptorium-v2-sprint2-per-engine-schemas.md
docs/specs/: 2026-06-04-scriptorium-design.md  2026-06-05-scriptorium-v2-design.md  2026-06-09-citation-support-design-options.md
examples/: librarian-example.md  peer-review-example.md  research-scout-example.md  statistician-example.md
examples/power-sample-size/: README.md  correlation_input.json  correlation_output.json  linear_regression_input.json  linear_regression_output.json  one_sample_t_input.json  one_sample_t_output.json  one_way_anova_input.json  one_way_anova_output.json  paired_t_input.json  paired_t_output.json  survival_logrank_events_input.json  survival_logrank_events_output.json  two_proportions_input.json  two_proportions_output.json  two_sample_t_input.json  two_sample_t_output.json
examples/stat-run/: README.md  multiple_testing_input.json  multiple_testing_output.json  permutation_test_input.json  permutation_test_output.json
schemas/: README.md  citation_parse_response.schema.json  envelope.schema.json  epistemic_grade_response.schema.json  finding.schema.json  grimmer_response.schema.json  guideline_check_response.schema.json  injection_scan_response.schema.json  interim_boundaries_response.schema.json  power_request.schema.json  power_response.schema.json  profile.schema.json  stat_run_response.schema.json
scripts/: run_tests.sh  validate_frontmatter.py  validate_json.sh  validate_structure.sh
scripts/behavioral/: backends.py  judge_behavior.py  run_behavior_case.py
scripts/core/: citation_parse.py  epistemic_grade.py  grimmer.py  guideline_check.py  injection_scan.py  interim_boundaries.py  power_sample_size.py  stat_run.py
scripts/guard/: egress_guard.py
scripts/kb/: contract.md  provider.py  query.py
scripts/lib/: epistemic.py  json_io.py  profile.py  provenance.py
skills/epistemic-status/: SKILL.md
skills/field-note-from-url/: SKILL.md
skills/interim-analysis-reviewer/: SKILL.md
skills/literature-search/: SKILL.md
skills/manuscript-imrad/: SKILL.md
skills/peer-paraphrase/: SKILL.md
skills/power-sample-size/: SKILL.md
skills/reporting-guideline-check/: SKILL.md
tests/: test_engine_schemas.py  test_envelope_contract.py  test_schemas.py
tests/behavioral/: test_backends.py  test_judge.py  test_loaders.py  test_orchestration.py  test_prompt_behavior.py  test_report.py  test_runner.py  test_schemas.py  test_verdict.py
(+57 files in other folders)
