[project]
name = "scriptorium"
version = "0.5.2"
description = "Sovereign rigor/audit layer for the scientific knowledge lifecycle"
requires-python = ">=3.10"
dependencies = [
    "statsmodels>=0.14",
    "scipy>=1.11",
    "pingouin>=0.5.4",
    "lifelines>=0.27",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.18", "ruff>=0.5", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
# Engines are exercised as subprocesses (black-box CLI contract); patch=subprocess captures
# their execution, so the number reflects real coverage, not just directly-imported modules.
patch = ["subprocess"]
source = ["scripts"]
omit = ["scripts/validate_*.py"]   # standalone tooling, exercised via validate_structure.sh

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# Tests intentionally use inline imports (scoped to a test) and compact `a = ...; b = ...`
# data setup; these are deliberate, not defects.
"tests/**" = ["E402", "E702"]
